<resources>
    <string name="app_name">100 Push Ups Challenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro_header">Seven Weeks to 100 Push Ups for Beginners</string>
    <string name="intro_body">Based on Steve Speirs website, this app is going to be your companion in helping you
    complete 100 consecutive push ups by week seven.</string>
    <string name="title_activity_week">Week</string>
    <string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="week3">Week 3</string>
    <string name="week4">Week 4</string>
    <string name="week5">Week 5</string>
    <string name="week6">Week 6</string>
    <string name="week7">Final Test</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="title_activity_day">Day</string>
    <string name="title_activity_days_list">DaysList</string>
    <string name="title_activity_final_test">FinalTest</string>
    <string name="final_test_message">You should be proud of yourself for making it this far! \n\n
    If you have not taken any short cuts to get here and had a few days rest, you will achieve the goal you set seven weeks ago.
    Good Luck!</string>
</resources>
