<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ameya.sevenweekshundredpushupschallenge.Week">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/gym"
        android:scaleType="center"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week1"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week1"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week2"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week2"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week3"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week3"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week4"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week4"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week5"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week5"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week6"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week6"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week7"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/week7"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>
