<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ameya.sevenweekshundredpushupschallenge.DaysList">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/gym3"
        android:scaleType="center"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/day1"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/day1"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/day2"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/day2"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/day3"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/day3"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
